--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,7 @@
         "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "spatie/laravel-permission": "^6.10.1",
         "veelasky/laravel-hashid": "^3.1"
